<resources>
    <string name="app_name">Journalpedia</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again</string>
    <string name="error_ok_button">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="titlelabel">"Title : "</string>
    <string name="yearlabel">"Year : "</string>
    <string name="publisherlabel">"Publisher : "</string>
    <string name="descriptionlabel">"Description : "</string>
    <string name="downloadUrllabel">"DownloadUrl : "</string>
</resources>
