<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/titlelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlelabel" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/titlelabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/yearlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlelabel"
        android:text="@string/yearlabel" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/yearlabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/publisherlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yearlabel"
        android:text="@string/publisherlabel" />

    <TextView
        android:id="@+id/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/year"
        android:layout_toRightOf="@+id/publisherlabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/descriptionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/publisherlabel"
        android:text="@string/descriptionlabel" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/publisher"
        android:layout_toRightOf="@+id/descriptionlabel"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/downloadUrllabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionlabel"
        android:text="@string/downloadUrllabel" />

    <TextView
        android:id="@+id/downloadUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionlabel"
        android:layout_toRightOf="@+id/downloadUrllabel"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>

